tests/main_tests/ui/exactly_one_ui_err.rs
assert_cfg::exactly_one!{
    feature = "std",
    feature = "no_std",
}

assert_cfg::exactly_one!{
    feature = "foo",
    feature = "bar",
}

assert_cfg::exactly_one!{
    feature = "foo",
    feature = "bar",
    feature = "qux",
}



fn main(){}